--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Portfólio Reflexivo</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+  <section id=timeline>
+	<h1>Portfólio Reflexivo</h1>
+	<p class="leader">Estudante: Jean Nunes Ribeiro Araujo</p>
+	<div class="demo-card-wrapper">
+		<div class="demo-card demo-card--step1">
+			<div class="head">
+				<div class="number-box">
+					<span>01</span>
+				</div>
+				<h2><span class="small">Currículo orientado por</span>competências</h2>
+			</div>
+			<div class="body">
+				<p>"Para desenvolver competências é preciso, antes de tudo, trabalhar por problemas e por projetos, propor tarefas complexas e desafios que incitem os alunos a mobilizar seus conhecimentos e, em certa medida, completá-los." Perrenoud </p>
+				<img src="step1.jpg" alt="Graphic">
+			</div>
+		</div>
+
+		<div class="demo-card demo-card--step2">
+			<div class="head">
+				<div class="number-box">
+					<span>02</span>
+				</div>
+				<h2><span class="small">Concepções e teorias da</span>aprendizagem</h2>
+			</div>
+			<div class="body">
+				<p>As técnicas de ensino referem-se aos princípios gerais e pedagógicos que direcionam as estratégias de gerenciamento usadas para o ensino em sala de aula.</p>
+				<img src="step2.jpg" alt="Graphic">
+				<a href="2-teoria/abordagens-teoricas.pdf">Abordagens Teóricas</a> | 
+				<a href="2-teoria/questao-aprendizagem.pdf">Questão de Aprendizado</a> | 
+				<a href="2-teoria/abp.pdf">ABP</a> | 
+				<a href="2-teoria/sintese-provisoria-espiral-construtivista.pdf">Síntese Provisória da Espiral Construtivista</a> | 
+				<a href="2-teoria/espiral-construtivista.pdf">Espiral Construtivista</a> | 
+				<a href="2-teoria/abp-arco-maguerez.pdf">ABP e Arco de Maguerez</a>				
+				
+			</div>
+		</div>
+
+		<div class="demo-card demo-card--step3">
+			<div class="head">
+				<div class="number-box">
+					<span>03</span>
+				</div>
+				<h2><span class="small">Metodologias inovadoras de ensino</span>aprendizagem</h2>
+			</div>
+			<div class="body">
+				<p> A aprendizagem significativa é relacional, sua profundidade está na conexão entre os novos conteúdos e os conhecimentos prévios.​</p>
+				<img src="step3.jpg" alt="Graphic">
+				<a href="3-metodologias/aprendizagem_significativa.pdf">Aprendizagem Significativa</a> | 
+				<a href="3-metodologias/student-centered-instruction.pdf">Aprendizagem Centrada no Estudante</a> | 
+				<a href="3-metodologias/the-pen-is-mightier.pdf">A caneta é mais poderosa que o teclado </a>
+			</div>
+		</div>
+
+		<div class="demo-card demo-card--step4">
+			<div class="head">
+				<div class="number-box">
+					<span>04</span>
+				</div>
+				<h2><span class="small">Estratégias inovadoras de ensino</span>aprendizagem</h2>
+			</div>
+			<div class="body">
+				<p>“Para pôr o diálogo em prática, o educador não pode colocar-se na posição ingênua de quem se pretende detentor de todo o saber; deve, antes, colocar-se na posição humilde de quem sabe que não sabe tudo.” Paulo Freire</p>
+				<img src="step4.jpg" alt="Graphic">
+				<a href="4-estrategias/talkshow.pdf">TalkShow</a> | 
+				<a href="4-estrategias/talkshow-roteiro.pdf">Roteiro do TalkShow</a>
+			</div>
+		</div>
+
+		<div class="demo-card demo-card--step5">
+			<div class="head">
+				<div class="number-box">
+					<span>05</span>
+				</div>
+				<h2><span class="small">Avaliação da</span>aprendizagem</h2>
+			</div>
+			<div class="body">
+				<p>"Se a visão culposa do erro, na prática escolar continuar sendo predominante, não haverá como encará-lo como fonte de conhecimento pedagógico e a avaliação prosseguirá na sua trajetória de instrumento de seleção, discriminação, meritocracia e exclusão." Luckesi</p>
+				<img src="step5.jpg" alt="Graphic">
+				<a href="5-avaliacao/avaliacao-dialogica.pdf">Avaliação Dialógica</a> | 
+				<a href="5-avaliacao/instrumento-avaliacao.pdf">Instrumento de Avaliação para Relatórios Técnicos</a>
+			</div>
+		</div>
+
+		<div class="demo-card demo-card--step6">
+			<div class="head">
+				<div class="number-box">
+					<span>06</span>
+				</div>
+				<h2><span class="small">Avaliação</span>institucional</h2>
+			</div>
+			<div class="body">
+				<p>A Avaliação Institucional é um processo contínuo e permanente de autoconhecimento e de reflexão, visando a aprimorar a qualidade de ensino, pesquisa, extensão e gestão administrativa.</p>
+				<img src="step6.jpg" alt="Graphic">
+				<a href="6-avaliacao-institucional/avaliacao-institucional.pdf">Indicadores da Avaliação Institucional</a> | 
+				<a href="6-avaliacao-institucional/avaliacao-institucional-em-cursos-de-ensino-superior.pdf">Avaliação Institucional em cursos de ensino superior</a> | 
+				<a href="6-avaliacao-institucional/informativo_2edicao_junho.pdf">Avaliação IN LOCO: Informativo INEP</a>
+			</div>
+		</div>
+
+
+		<div class="demo-card demo-card--step7">
+			<div class="head">
+				<div class="number-box">
+					<span>07</span>
+				</div>
+				<h2><span class="small">Gestão</span>educacional</h2>
+			</div>
+			<div class="body">
+				<p>A gestão educacional envolve todos os processos de uma instituição escolar. Desde o setor administrativo, até o pedagógico, cabendo aos gestores otimizar as atividades diárias e aumentar a eficiência do ensino dentro da instituição.</p>
+				<img src="step7.jpg" alt="Graphic">
+			</div>
+		</div>
+
+	</div>
+</section>
+  
+  
+</body>
+</html>
