--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Professor</h3>
-                            <div class="subheading mb-3">Department of Software Engineering at Unicatolica (TO)</div>
+                            <div class="subheading mb-3">Department of Information Systems at Unitins (TO)</div>
                             <p>I am a professor in subjects such as Software Coding, Requirements Engineering, Computer Networking and Information Technology in Software Engineering and Electrical Engineering courses.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2020 - Present</span></div>
