--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <a href="mailto:jean.to@gmail.com">jean.to@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        I received my B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009), M.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) (2018), Brazil. I am now enrolled as a Ph.D. student at Universidade Federal de Minas Gerais (UFMG), Brazil. I am currently a Professor with the Department of Software Engineering at Unicatolica-TO, a member of the Operations Research and Complex Systems Laboratory (ORCS Lab.) at UFMG, and Network Analyst at Tribunal de Justica do Estado do Tocantins. 
+                        I received my B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009), M.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) (2018), Brazil. I am now enrolled as a Ph.D. student at Universidade Federal de Minas Gerais (UFMG), Brazil. I am currently a Professor with the Department of Information Systems at Unitins-TO, a member of the Operations Research and Complex Systems Laboratory (ORCS Lab.) at UFMG, and Network Analyst at Tribunal de Justica do Estado do Tocantins. 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jeannra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
