--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Jean
-                        <span class="text-primary">Nunes</span>
+                        <span class="text-primary">Nunes,</span>
+                        PhD
                     </h1>
                     <div class="subheading mb-5">
-                        Palmas · Tocantins · (63) 98425-9410 ·
+                        Brasília · DF ·
                         <a href="mailto:jean.to@gmail.com">jean.to@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        I received my B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009), M.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) (2018), Brazil. I am now enrolled as a Ph.D. student at Universidade Federal de Minas Gerais (UFMG), Brazil. I am currently a Professor with the Department of Information Systems at Unitins-TO, a member of the Operations Research and Complex Systems Laboratory (ORCS Lab.) at UFMG, and Network Analyst at Tribunal de Justica do Estado do Tocantins. 
+                        I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst at Tribunal de Justica do Distrito Federal and Professor with at IDP-DF. 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jeannra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -94,20 +95,29 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Network Analyst</h3>
-                            <div class="subheading mb-3">Tribunal de Justica do Estado do Tocantins</div>
-                                <p>Responsible for the design, implementation, and maintenance of network technology services to ensure confidentiality, integrity, and availability of the company’s information assets. Responsible for the design, implementation, and maintenance of IT risk management plan. Assist in the development/refinement of the overall network design, network security and network availability.</p>
+                            <h3 class="mb-0">CyberSecurity Analyst</h3>
+                            <div class="subheading mb-3">Tribunal de Justica do Distrito Federal</div>
+                                <p>Team member and information security management.</p>
                             </u>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Ph.D. student</h3>
-                            <div class="subheading mb-3">Operations Research and Complex Systems Laboratory (ORCS Lab - UFMG)</div>
-                            <p>I do research optimization algoritms that solve multimodal problems using machine learning techniques.</p>
+                            <h3 class="mb-0">Professor</h3>
+                            <div class="subheading mb-3">Department of Computer Science and Software Engineering at IDP (DF)</div>
+                            <p>I am a professor in subjects such as Python Programming, Data Structure and Project Factory in Computer Science and Software Engineering courses.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2020 - March 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Network Analyst</h3>
+                            <div class="subheading mb-3">Tribunal de Justica do Estado do Tocantins</div>
+                                <p>Responsible for the design, implementation, and maintenance of network technology services to ensure confidentiality, integrity, and availability of the company’s information assets. Responsible for the design, implementation, and maintenance of IT risk management plan. Assist in the development/refinement of the overall network design, network security and network availability.</p>
+                            </u>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - March 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -115,7 +125,7 @@
                             <div class="subheading mb-3">Department of Information Systems at Unitins (TO)</div>
                             <p>I am a professor in subjects such as Software Coding, Requirements Engineering, Computer Networking and Information Technology in Software Engineering and Electrical Engineering courses.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2020 - March 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
