--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <a href="mailto:jean.to@gmail.com">jean.to@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst at Tribunal de Justica do Distrito Federal and Professor with at IDP-DF. 
+                        I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst at Tribunal de Justica do Distrito Federal and IT Professor at IDP (DF). 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jeannra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
