--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
                     <p class="mb-0">Apart from being a tech enthusiast, I follow a number of sci-fi and fantasy genre movies, I am an aspiring mountain biker, and I spend some amount of my free time supporting my soccer team Palmeiras and watching NBA games.</p>
                 </div>
             </section>
+            <!-- Courses>
+            <section class="resume-section" id="Courses">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Courses</h2>
+                    <p>Python Programming</p>
+                    <div><a href="https://jeanto.github.com/jeanto" target="_blank">Python Programming Course (Notebook)</a></div>
+                </div>
+            </section>
             <hr class="m-0" />
             <!-- Awards-->
             <!--
