--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                     <p class="mb-0">Apart from being a tech enthusiast, I follow a number of sci-fi and fantasy genre movies, I am an aspiring mountain biker, and I spend some amount of my free time supporting my soccer team Palmeiras and watching NBA games.</p>
                 </div>
             </section>
+            <hr class="m-0" />
             <!-- Courses-->
             <section class="resume-section" id="Courses">
                 <div class="resume-section-content">
