--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#courses">Courses</a></li>
                     <!--li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li-->
                 </ul>
             </div>
@@ -257,7 +258,7 @@
             </section>
             <hr class="m-0" />
             <!-- Courses-->
-            <section class="resume-section" id="Courses">
+            <section class="resume-section" id="courses">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Courses</h2>
                     <p>Python Programming</p>
