--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Courses</h2>
                     <p>Python Programming</p>
-                    <div><a href="https://jeanto.github.com/jeannunes" target="_blank">Python Programming Course (Notebook)</a></div>
+                    <div><a href="https://jeanto.github.io/jeannunes" target="_blank">Python Programming Course (Notebook)</a></div>
                 </div>
             </section>
             <hr class="m-0" />
