--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="mailto:jean.to@gmail.com">jean.to@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst at Tribunal de Justica do Distrito Federal and IT Professor at IDP (DF). 
+                        I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst and IT Professor. 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jeannra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -97,7 +97,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">CyberSecurity Analyst</h3>
-                            <div class="subheading mb-3">Tribunal de Justica do Distrito Federal</div>
+                            <div class="subheading mb-3">*</div>
                                 <p>Team member and information security management.</p>
                             </u>
                         </div>
@@ -172,14 +172,16 @@
                             <h3 class="mb-0">Universidade Federal de Minas Gerais (UFMG)</h3>
                             <div class="subheading mb-3">PH.D. Student</div>
                             <div><a href="https://www.ppgee.ufmg.br/" target="_blank">Electrical Engineering Postgraduate Program</a></div>
+                            <div><a href="https://repositorio.ufmg.br/handle/1843/59128" target="_blank">Thesis: Diversity-driven migration strategy for distributed evolutionary algorithms applied to large-scale optimization problems</a></div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - August 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Universidade Federal de Minas Gerais (UFMG)</h3>
                             <div class="subheading mb-3">Master degree</div>
                             <div><a href="https://www.ppgee.ufmg.br/" target="_blank">Electrical Engineering Postgraduate Program</a></div>
+                            <div><a href="https://repositorio.ufmg.br/handle/1843/31680" target="_blank">Dissertation: Investigating multicriteria approaches for the routing problem in ad-hoc wireless networks using QoS-aware metrics</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2016 - May 2018</span></div>
                     </div>
