--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Courses</h2>
                     <p>Python Programming</p>
-                    <div><a href="https://github.com/jeanto/python_programming_course_notebook" target="_blank">Python Programming Course (Notebook)</a></div>
+                    <div><a href="https://github.com/jeanto/python_programming_course_notebook.git" target="_blank">Python Programming Course (Notebook)</a></div>
+                    <p>Data Structure Programming</p>
+                    <div><a href="https://github.com/jeanto/data_structure_course_notebook.git" target="_blank">Data Structure Programming Course (Notebook)</a></div>
                 </div>
             </section>
             <hr class="m-0" />
