--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p class="lead mb-5">
                         I received my M.Sc. and D.Sc. degree in Electrical Engineering from Universidade Federal de Minas Gerais (UFMG) and B.Sc. degree in Information System from Faculdade Católica do Tocantins (FACTO) (2009). I am currently a CyberSecurity Analyst and IT Professor. 
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/jeannra" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/jeanciber" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a-->
